--- a/PiHome/res/layout/activity_main.xml
+++ b/PiHome/res/layout/activity_main.xml
@@ -10,17 +10,15 @@
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc.
     -->
-
-    <TextView
-        android:id="@+id/fullscreen_content"
+    
+    <ImageView
+       	android:id="@+id/imageView1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+      	android:layout_height="match_parent"
         android:gravity="center"
-        android:keepScreenOn="true"
-        android:text="@string/dummy_content"
-        android:textColor="#33b5e5"
-        android:textSize="50sp"
-        android:textStyle="bold" />
+       	android:keepScreenOn="true"
+        android:src="@drawable/floorplan"
+		android:scaleType = "fitCenter" />
 
     <!--
          This FrameLayout insets its children based on system windows using
@@ -41,7 +39,7 @@
             android:background="@color/black_overlay"
             android:orientation="horizontal"
             tools:ignore="UselessParent" >
-
+            
             <Button
                 android:id="@+id/dummy_button"
                 style="?metaButtonBarButtonStyle"
@@ -50,13 +48,7 @@
                 android:layout_weight="1"
                 android:text="@string/dummy_button" />
         </LinearLayout>
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/floorplan" />
-
+        
     </FrameLayout>
 
 </FrameLayout>
