--- a/PiHome/res/layout/activity_main.xml
+++ b/PiHome/res/layout/activity_main.xml
@@ -10,15 +10,13 @@
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc.
     -->
-    
-    <ImageView
-       	android:id="@+id/imageView1"
-        android:layout_width="match_parent"
-      	android:layout_height="match_parent"
-        android:gravity="center"
-       	android:keepScreenOn="true"
-        android:src="@drawable/floorplan"
-		android:scaleType = "fitCenter" />
+
+    <Button
+        android:id="@+id/dummy_button"
+        style="?metaButtonBarButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/dummy_button" />
 
     <!--
          This FrameLayout insets its children based on system windows using
@@ -30,6 +28,33 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true" >
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:adjustViewBounds="true"
+                android:gravity="center"
+                android:keepScreenOn="true"
+                android:scaleType="fitCenter"
+                android:src="@drawable/floorplan" />
+
+            <ImageButton
+                android:id="@+id/imageButton1"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_alignBottom="@+id/imageView1"
+                android:layout_alignLeft="@+id/imageView1"
+                android:layout_alignStart="@+id/imageView1"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:src="@drawable/outletbuttongreen" />
+        </RelativeLayout>
+
         <LinearLayout
             android:id="@+id/fullscreen_content_controls"
             style="?metaButtonBarStyle"
@@ -39,16 +64,7 @@
             android:background="@color/black_overlay"
             android:orientation="horizontal"
             tools:ignore="UselessParent" >
-            
-            <Button
-                android:id="@+id/dummy_button"
-                style="?metaButtonBarButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/dummy_button" />
         </LinearLayout>
-        
     </FrameLayout>
 
 </FrameLayout>
