--- a/PiHome/res/layout/activity_main.xml
+++ b/PiHome/res/layout/activity_main.xml
@@ -42,6 +42,43 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignBottom="@+id/imageView1"
+            android:layout_marginBottom="100dp"
+            android:layout_alignLeft="@+id/imageView1"
+            android:layout_marginLeft="45dp"
+            android:layout_alignStart="@+id/imageView1"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:background="@drawable/outlet_green" />
+        <Button
+            android:id="@+id/outlet2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="45dp"
+            android:layout_alignTop="@+id/imageView1"
+            android:layout_marginLeft="75dp"
+            android:layout_alignLeft="@+id/imageView1"
+            android:layout_alignStart="@+id/imageView1"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:background="@drawable/outlet_green" />
+        <Button
+            android:id="@+id/outlet3"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignBottom="@+id/imageView1"
+            android:layout_marginLeft="125dp"
+            android:layout_alignLeft="@+id/imageView1"
+            android:layout_alignStart="@+id/imageView1"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:background="@drawable/outlet_green" />
+        <Button
+            android:id="@+id/outlet4"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="100dp"
+            android:layout_alignTop="@+id/imageView1"
+            android:layout_marginLeft="225dp"
             android:layout_alignLeft="@+id/imageView1"
             android:layout_alignStart="@+id/imageView1"
             android:adjustViewBounds="true"
