--- a/PiHome/res/menu/main.xml
+++ b/PiHome/res/menu/main.xml
@@ -4,12 +4,12 @@
     tools:context="com.example.testing.MainActivity" >
 	
 	<item
-        android:id="@+id/sensors"
+        android:id="@+id/summary"
         android:orderInCategory="100"
         android:title="@string/summary"
         app:showAsAction="never"/>
     <item
-        android:id="@+id/summary"
+        android:id="@+id/schedule"
         android:orderInCategory="100"
         android:title="@string/schedule"
         app:showAsAction="never"/>
