--- a/PiHome/res/layout/summary.xml
+++ b/PiHome/res/layout/summary.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    >
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:stretchColumns="1"
+        >
+
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Recorded Temperature"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <ImageView
         android:id="@+id/temp_graph"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:adjustViewBounds="true"
         android:contentDescription="@string/temp_graph"
         android:gravity="center"
@@ -16,17 +28,43 @@
         android:scaleType="fitCenter"
         android:src="@drawable/temp_graph" />
 
+    
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="34dp"
+            android:layout_height="wrap_content"
+            android:text="Energy Usage"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
     <ImageView
         android:id="@+id/energy_graph"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/temp_graph"
         android:adjustViewBounds="true"
         android:contentDescription="@string/energy_graph"
         android:gravity="center"
         android:keepScreenOn="true"
         android:scaleType="fitCenter"
         android:src="@drawable/energy_graph" />
+    
+    <TextView
+            android:id="@+id/textView4"
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Estimated electricty savings: 40KWh"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="34dp"
+        android:text="Tip: Enegry usage is high during the day. You can turn off the devices connected to your kitchen outlet"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-</RelativeLayout>
+    </TableLayout>
+</ScrollView>
