--- a/PiHome/res/layout/schedule.xml
+++ b/PiHome/res/layout/schedule.xml
@@ -55,6 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/textView4"
         android:text="Outlet 1"
         android:textAppearance="?android:attr/textAppearanceLarge" />
