Removed extra outbound button due to resolution

--- a/PiHome/res/layout/activity_main.xml
+++ b/PiHome/res/layout/activity_main.xml
@@ -6,9 +6,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:gravity="center"
     tools:context=".MainActivity" >
 
-        
+        <RelativeLayout 
+   android:layout_width="wrap_content"
+   android:layout_height="wrap_content">
        <Button
         android:id="@+id/dummy_button"
         style="?metaButtonBarButtonStyle"
@@ -66,7 +69,7 @@
                android:background="@drawable/outlet_green"
                android:scaleType="fitCenter" />
 
-           <Button
+        <!--    <Button
                android:id="@+id/outlet4"
                android:layout_width="50dp"
                android:layout_height="50dp"
@@ -77,9 +80,9 @@
                android:layout_marginTop="100dp"
                android:adjustViewBounds="true"
                android:background="@drawable/outlet_green"
-               android:scaleType="fitCenter" />
+               android:scaleType="fitCenter" /> -->
       
            </RelativeLayout>
-
+</RelativeLayout>
 
    
